--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "description": "a tool for updating icons in segma-ui framework",
     "main": "src/index.js",
+    "bin": {
+        "segma-icon-update": "./src/index.js"
+    },
     "scripts": {
         "lint": "eslint .",
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,6 +26,7 @@
         "chalk": "^4.1.0",
         "extract-zip": "^2.0.1",
         "fs-extra": "^9.0.1",
-        "node-fetch": "^2.6.1"
+        "node-fetch": "^2.6.1",
+        "simple-git": "^2.25.0"
     }
 }
