--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "bin": {
         "segma-icon-update": "./src/index.js"
     },
+    "files": [
+        "src"
+    ],
     "scripts": {
         "lint": "eslint .",
         "test": "echo \"Error: no test specified\" && exit 1"
